--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ package-lock.json
 .env
 package.json
 .DS_Store
-.vercel
+.elasticbeanstalk/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
