--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
+# Dependencies
 node_modules/
-package-lock.json
+
+# Environment
 .env
-package.json
+.env.*
+!.env.example
+
+# OS Files
 .DS_Store
-.elasticbeanstalk/
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Docker
+.dockerignore
